chore(dev): improve local deployment workflow